--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,16 @@
-os:
-  - linux
-sudo: false
-addons:
-  apt:
-    # Flutter depends on /usr/lib/x86_64-linux-gnu/libstdc++.so.6 version GLIBCXX_3.4.18
-    sources:
-      - ubuntu-toolchain-r-test # if we don't specify this, the libstdc++6 we get is the wrong version
-    packages:
-      - libstdc++6
-      - fonts-droid
+os: osx
+language: generic
+osx_image: xcode8.3
 before_script:
+  - pip install six
+  - brew update
+  - brew install --HEAD libimobiledevice
+  - brew install ideviceinstaller
+  - brew install ios-deploy
   - git clone https://github.com/flutter/flutter.git -b alpha --depth 1
-  - ./flutter/bin/flutter doctor
 script:
-  - ./flutter/bin/flutter test
+  - ./flutter/bin/flutter -v build ios --no-codesign
+
 cache:
   directories:
 - $HOME/.pub-cache
